Edited application properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 spring.application.name=esg-module-backend
+
+# Choose a port for the backend, 8080 is the default port number
+# server.port=8080
+
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
+
+# Uncomment to see the SQL queries executed by the framework
+# spring.jpa.show-sql=true
+
+# Uncomment to see the debug log level for the SQL logger
+# logging.level.org.hibernate.SQL=DEBUG
+
+springdoc.swagger-ui.path=api-docs
