BAC-138 add database and functionality for saving trip logs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,20 @@
 spring.application.name=esg-module-backend
-
 # Choose a port for the backend, 8080 is the default port number
 # server.port=8080
-
+#H2 config
+spring.datasource.url=jdbc:h2:file:./data/database
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+#Testing only
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+#JPA config
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
-
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 # Uncomment to see the SQL queries executed by the framework
 # spring.jpa.show-sql=true
-
 # Uncomment to see the debug log level for the SQL logger
 # logging.level.org.hibernate.SQL=DEBUG
-
 springdoc.swagger-ui.path=api-docs
